Feature: Adding content to differences.html with the style properties

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@
   font-weight: bolder;
   font-size: x-large;
 }
+.navbar-expand-lg-page3{
+  background-image: linear-gradient(to right, darkblue, deepskyblue);
+  font-weight: bolder;
+  font-size: x-large;
+}
 .navbar-brand{
   font-size: x-large !important;
 }
@@ -161,4 +166,7 @@ hr.class-1 {
 }
 hr.class-2 {
   border-top: 7px solid lightgreen;
+}
+hr.class-3 {
+  border-top: 7px solid deepskyblue;
 }
